--- a/JAVASCRIPT_BASIC/base.html
+++ b/JAVASCRIPT_BASIC/base.html
@@ -8,9 +8,20 @@
 <body>
     
     <!-- <script src='test.js'  type="text/javascript"></script> -->
-    <!-- <script src='v26_If_statement.js'  type="text/javascript"></script> -->
-    <!-- <script src='v27_If_else_statement.js'  type="text/javascript"></script> -->
-    <script src='v28_Else_if_statement.js'  type="text/javascript"></script>
-    <!-- <script src='v29_Switch_statement.js'  type="text/javascript"></script> -->
+
+    <!-- Conditional Statements -->
+    <!-- <script src='v26_If_statement.js' type="text/javascript"></script> -->
+    <!-- <script src='v27_If_else_statement.js' type="text/javascript"></script> -->
+    <!-- <script src='v28_Else_if_statement.js' type="text/javascript"></script> -->
+    <!-- <script src='v29_Switch_statement.js' type="text/javascript"></script> -->
+
+    <!-- Loops -->
+    <!-- <script src='v30_For_loop.js' type="text/javascript"></script> -->
+    <!-- <script src='v31_Nested_for_loop.js' type="text/javascript"></script> -->
+    <!-- <script src='v32_while_loop.js' type="text/javascript"></script> -->
+    <!-- <script src='v33_do_while_loop.js' type="text/javascript"></script> -->
+    <!-- <script src='v34_break_and_continue_statement.js' type="text/javascript"></script>   -->
+
+     
 </body>
 </html>
