--- a/JAVASCRIPT_BASIC/base.html
+++ b/JAVASCRIPT_BASIC/base.html
@@ -20,8 +20,85 @@
     <!-- <script src='v31_Nested_for_loop.js' type="text/javascript"></script> -->
     <!-- <script src='v32_while_loop.js' type="text/javascript"></script> -->
     <!-- <script src='v33_do_while_loop.js' type="text/javascript"></script> -->
-    <!-- <script src='v34_break_and_continue_statement.js' type="text/javascript"></script>   -->
+    <!-- <script src='v34_break_and_continue_statement.js' type="text/javascript"></script>    -->
 
-     
+    <!-- Functions -->
+    <!-- <script src='v35_Function.js' type="text/javascript"></script> -->
+    <!-- <script src='v36_Function_with_parameters.js' type="text/javascript"></script> -->
+    <!-- <script src='v37_Argument_objects.js' type="text/javascript"></script> -->
+    <!-- <script src='v38_Rest_parameters.js' type="text/javascript"></script> -->
+    <!-- <script src='v39_Rest_parameters_vs_Arguments_Objects.js' type="text/javascript"></script> -->
+    <script src='v40_Return_statement.js' type="text/javascript"></script>
 </body>
-</html>
+</html> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <html>
+<head><title>Digital Clock Using JS</title>
+<style>
+#clock
+{
+font-size: 80px;
+text-align: center;
+color:#ffffff;
+padding-top:255px
+}
+body
+{
+font-family:Tahoma;
+background-color: #0E0909;
+}
+</style>
+</head>
+<body>
+<h1 id="clock"></h1>
+<script>
+function DigiClock()
+    {
+        var d = new Date();
+        var h = d.getHours();
+        var m = d.getMinutes();
+        var s = d.getSeconds();
+        var show ='AM';
+        if (h>12)
+            { show='PM'; }
+        if (h> 12)
+            { h=h-12; }
+        if (h==0)
+            { h=12; }
+        if (h < 10)
+            { h = '0' + h; }
+        if (m < 10)
+            { m ='0'+ m }
+        if(s<10)
+            { s = '0' + s; }
+    document.getElementById('clock').innerHTML = h+':'+m+':'+s+' '+show;
+}
+setInterval(DigiClock, 1000)
+</script>
+</table>
+</body>
+</html> -->
+
