Constructor in JS

--- a/JAVASCRIPT_BASIC/base.html
+++ b/JAVASCRIPT_BASIC/base.html
@@ -39,7 +39,12 @@
     <!-- <script src='v46_IIFE.js' type="text/javascript"></script> -->
     <!-- <script src='v47_typeof_operator.js' type="text/javascript"></script> -->
     <!-- <script src='v48_undefined_null_datatype.js' type="text/javascript"></script> -->
-    <script src='v49_Variables.js' type="text/javascript"></script>
+    <!-- <script src='v49_Variables.js' type="text/javascript"></script> -->
+    <!-- <script src='v50_Objects_literal.js' type="text/javascript"></script> -->
+
+    <!-- <script src='v51_Constructor.js' type="text/javascript"></script> -->
+    <!-- <script src='v52_For_in_loop.js' type="text/javascript"></script> -->
+    <script src='v53_Constructor_as_class.js' type="text/javascript"></script>
 
     
 
