ES6 class in JS

--- a/JAVASCRIPT_BASIC/base.html
+++ b/JAVASCRIPT_BASIC/base.html
@@ -50,7 +50,11 @@
     <!-- <script src='v55_Prototype_works.js' type="text/javascript"></script> -->
     <!-- <script src='v56_Prototype_inheritance.js' type="text/javascript"></script> -->
     <!-- <script src='v57_Composition_or_mixins.js' type="text/javascript"></script> -->
-    <script src='v58_ES6_class.js' type="text/javascript"></script>
+    <!-- <script src='v58_ES6_class.js' type="text/javascript"></script> -->
+    <script src='v59_Class_Inheritance.js' type="text/javascript"></script>
+
+
+
 
 
     
