--- a/JAVASCRIPT_BASIC/base.html
+++ b/JAVASCRIPT_BASIC/base.html
@@ -51,9 +51,10 @@
     <!-- <script src='v56_Prototype_inheritance.js' type="text/javascript"></script> -->
     <!-- <script src='v57_Composition_or_mixins.js' type="text/javascript"></script> -->
     <!-- <script src='v58_ES6_class.js' type="text/javascript"></script> -->
-    <script src='v59_Class_Inheritance.js' type="text/javascript"></script>
+    <!-- <script src='v59_Class_Inheritance.js' type="text/javascript"></script> -->
 
-
+    <!-- Array -->
+    <script src='v60_Array.js' type="text/javascript"></script>
 
 
 
